--- a/app/views/calcul.html
+++ b/app/views/calcul.html
@@ -1,12 +1,20 @@
-<div>
-	<p>Nous allons pouvoir faire des calculs ensemble !!</p>
-	<p>Quels nombres voulez vous manipuler ?</p>
-	<p>Le premier : <input ng-model="premierNombre"/></p>
-	<p>Le second : <input ng-model="secondNombre"/></p>
-</div>
-<div>
-	<p>Leur addition est : <span ng-bind="addition()"></span></p>
-	<p>Leur soustraction est : <span ng-bind="soustraction()"></span></p>
-	<p>Leur multiplication est : <span ng-bind="multiplication()"></span></p>
-	<p>Leur division est : <span ng-bind="division()"></span></p>
+<div class="container">
+	<div class="row">
+		<p>Nous allons pouvoir faire des calculs ensemble !!</p>
+		<p>Quels nombres voulez vous manipuler ?</p>
+		<form class="form-inline">
+			<div class="form-group">
+				<label>Le premier : </label> <input size="8" type="number" class="form-control" ng-model="premierNombre"/>
+			</div>
+			<div class="form-group">
+				<label>le second : </label> <input size="8" type="number" class="form-control" ng-model="secondNombre"/>
+			</div>
+		</form>
+	</div>
+	<div class="row">
+		<p>Leur addition est : <span ng-bind="addition()"></span></p>
+		<p>Leur soustraction est : <span ng-bind="soustraction()"></span></p>
+		<p>Leur multiplication est : <span ng-bind="multiplication()"></span></p>
+		<p>Leur division est : <span ng-bind="division()"></span></p>
+	</div>
 </div>
