--- a/app/views/calcul.html
+++ b/app/views/calcul.html
@@ -9,12 +9,26 @@
 			<div class="form-group">
 				<label>le second : </label> <input size="8" type="number" class="form-control" ng-model="secondNombre"/>
 			</div>
+			<button class="btn btn-primary" ng-click="afficherResultats()">CALCUL</button>
 		</form>
 	</div>
 	<div class="row">
-		<p>Leur addition est : <span ng-bind="addition()"></span></p>
-		<p>Leur soustraction est : <span ng-bind="soustraction()"></span></p>
-		<p>Leur multiplication est : <span ng-bind="multiplication()"></span></p>
-		<p>Leur division est : <span ng-bind="division()"></span></p>
+		<hr/>
+	</div>
+	<div class="row" ng-show="afficheResultat">
+		<div class="row">
+			<div class="col-md-6">Leur addition est : <span ng-bind="addition()"></span></div>
+			<div class="col-md-6">Leur soustraction est : <span ng-bind="soustraction()"></span></div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">Leur multiplication est : <span ng-bind="multiplication()"></span></div>
+			<div class="col-md-6">Leur division est : <span ng-bind="division()"></span></div>
+		</div>
+		<div class="row">
+			<hr/>
+		</div>
+		<div class="row">
+			<button class="btn btn-info col-md-4 col-md-offset-4" ng-click="remiseAZero()">Remettre à zéro</button>
+		</div>
 	</div>
 </div>
